GestionArchivos/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simpleapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/static-site/$1"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/?$ /static-site/index.html break;
spec:
  # ingressClassName: nginx
  rules:
  - host: miniostatic.192.168.0.100.nip.io
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: my-minio
            port: 
              number: 9000
